fixed css on header/collapses and location page

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   width: auto;
-  margin: 2% 100px 2% 100px;
+  margin: 2% 10% 2% 10%;
   height: 10%;
 }
 .header .header__logo--desktop {
@@ -216,9 +216,11 @@ footer p {
 }
 
 .collapses__section {
+  grid-column: 1/3;
   display: flex;
-  width: 100%;
-  height: fit-content;
+  height: 100%;
+  max-height: 350px;
+  width: auto;
   justify-content: space-between;
   gap: 10%;
   overflow: hidden;
@@ -292,9 +294,9 @@ footer p {
 }
 .collapses__section .collapse__container .open {
   border-radius: 10px;
-  height: 100%;
+  height: 70%;
   width: auto;
-  padding: 5% 10px;
+  padding: 6% 10px;
   padding-bottom: 10px;
   transform: translateY(0);
   opacity: 1;
@@ -302,6 +304,7 @@ footer p {
   top: -1.3em;
   margin-bottom: 25px;
 }
+
 .slideshow__container {
   grid-column: 1/3;
   border-radius: 25px;
@@ -464,7 +467,7 @@ footer p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin: 2% 100px 2% 100px;
+  margin: 2% 10% 2% 10%;
 }
 @media screen and (max-width: 768px) {
   #main {
