--- a/src/style/components/collapse.scss
+++ b/src/style/components/collapse.scss
@@ -2,9 +2,11 @@
 @import '../mixins.scss';
 
 .collapses__section {
+  grid-column: 1/3;
   display: flex;
-  width: 100%;
-  height: fit-content;
+  height: 100%;
+  max-height: 350px;
+  width: auto;
   justify-content: space-between;
   gap: 10%;
   overflow: hidden;
@@ -66,17 +68,16 @@
     }
     .open {
       border-radius: 10px;
-      height: 100%;
+      height: 70%;
       width: auto;
-      padding: 5% 10px;
+      padding: 6% 10px;
       padding-bottom: 10px;
       transform: translateY(0);
       opacity: 1;
       transition: all 1s ease;
       top: -1.3em;
       margin-bottom: 25px;
-      @media screen and (max-width: 768px) {
-      }
+    
     }
   }
 }
