--- a/src/style/pages/locations.scss
+++ b/src/style/pages/locations.scss
@@ -135,7 +135,5 @@
       }
     }
   }
-  #collapses_host_page{
-    grid-column: 1/3;
-  }
+
 }
